# hisho

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: common.rs  consts.rs  lib.rs  main.rs  sites.rs
src/sites/: torrentmax.rs  torrentqq.rs  torrentsir.rs  ttobogo.rs
src/test_data/: torrentmax_bbs.html  torrentmax_search.html  torrentqq_bbs.html  torrentqq_search.html  torrentsir_bbs.html  torrentsir_search.html  ttobogo_bbs.html  ttobogo_search.html
